Save audio in azure container

--- a/src/TextToSpeech.Api/appsettings.json
+++ b/src/TextToSpeech.Api/appsettings.json
@@ -8,5 +8,7 @@
   "CognitiveApiKey": "",
   "CognitiveTokenUrl": "",
   "CognitiveUrl": "",
-  "User-Agent": ""
+  "User-Agent": "",
+  "StorageContainerName": "",
+  "StorageConnectionString": ""
 }
