--- a/src/TextToSpeech.Api/appsettings.json
+++ b/src/TextToSpeech.Api/appsettings.json
@@ -9,6 +9,8 @@
   "CognitiveTokenUrl": "",
   "CognitiveUrl": "",
   "User-Agent": "",
-  "StorageContainerName": "",
-  "StorageConnectionString": ""
+  "StorageOptions": {
+    "ConnectionString": "",
+    "ContainerName":  ""
+  }
 }
