--- a/src/TextToSpeech.Api/appsettings.json
+++ b/src/TextToSpeech.Api/appsettings.json
@@ -11,6 +11,12 @@
   "User-Agent": "",
   "StorageOptions": {
     "ConnectionString": "",
-    "ContainerName":  ""
-  }
+    "ContainerName": ""
+  },
+  "AcronymsOptions": [
+    {
+      "Key": "",
+      "Value": ""
+    }
+  ]
 }
