--- a/src/TextToSpeech.Api/appsettings.json
+++ b/src/TextToSpeech.Api/appsettings.json
@@ -1,18 +1,26 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "",
   "CognitiveApiKey": "",
   "CognitiveTokenUrl": "",
   "CognitiveUrl": "",
   "User-Agent": "",
   "StorageOptions": {
-    "ConnectionString": "",
-    "ContainerName": ""
+    "ContainerName": "",
+    "ConnectionString": ""
   },
+  "RegexOptions": [
+    {
+      "Pattern": "",
+      "Replacement": ""
+    }
+  ],
   "AcronymsOptions": [
     {
       "Key": "",
